clean up index and add more entries

--- a/build_pdf_siam/riemann.bib
+++ b/build_pdf_siam/riemann.bib
@@ -231,7 +231,7 @@
 	Year = {2008}}
 
 @article{HLL,
-  title={On upstream differencing and Godunov-type schemes for hyperbolic
+  title={On upstream differencing and {Godunov-type} schemes for hyperbolic
 conservation laws},
   author={Harten, Amiram and Lax, Peter D and Leer, Bram van},
   journal={SIAM review},
