reduce some figure sizes and close up white space elsewhere

--- a/build_pdf_siam/riemann.tex
+++ b/build_pdf_siam/riemann.tex
@@ -3777,17 +3777,17 @@ middle state:
 \end{Verbatim}
 
     \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{combined_files/combined_246_0.pdf}
+    \adjustimage{max size={0.7\linewidth}{0.7\paperheight}}{combined_files/combined_246_0.pdf}
     \end{center}
     { \hspace*{\fill} \\}
     
     \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{combined_files/combined_246_1.pdf}
+    \adjustimage{max size={0.7\linewidth}{0.7\paperheight}}{combined_files/combined_246_1.pdf}
     \end{center}
     { \hspace*{\fill} \\}
     
     \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{combined_files/combined_246_2.pdf}
+    \adjustimage{max size={0.7\linewidth}{0.7\paperheight}}{combined_files/combined_246_2.pdf}
     \end{center}
     { \hspace*{\fill} \\}
     
@@ -3804,17 +3804,17 @@ non-dry state to \(h=0\).
 \end{Verbatim}
 
     \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{combined_files/combined_248_0.pdf}
+    \adjustimage{max size={0.7\linewidth}{0.7\paperheight}}{combined_files/combined_248_0.pdf}
     \end{center}
     { \hspace*{\fill} \\}
     
     \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{combined_files/combined_248_1.pdf}
+    \adjustimage{max size={0.7\linewidth}{0.7\paperheight}}{combined_files/combined_248_1.pdf}
     \end{center}
     { \hspace*{\fill} \\}
     
     \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{combined_files/combined_248_2.pdf}
+    \adjustimage{max size={0.7\linewidth}{0.7\paperheight}}{combined_files/combined_248_2.pdf}
     \end{center}
     { \hspace*{\fill} \\}
     
@@ -3956,17 +3956,17 @@ discontinuous while \(h\) and \(u\) are continuous.
 \end{Verbatim}
 
     \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{combined_files/combined_260_0.pdf}
+    \adjustimage{max size={0.7\linewidth}{0.7\paperheight}}{combined_files/combined_260_0.pdf}
     \end{center}
     { \hspace*{\fill} \\}
     
     \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{combined_files/combined_260_1.pdf}
+    \adjustimage{max size={0.7\linewidth}{0.7\paperheight}}{combined_files/combined_260_1.pdf}
     \end{center}
     { \hspace*{\fill} \\}
     
     \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{combined_files/combined_260_2.pdf}
+    \adjustimage{max size={0.7\linewidth}{0.7\paperheight}}{combined_files/combined_260_2.pdf}
     \end{center}
     { \hspace*{\fill} \\}
     
@@ -5133,7 +5133,8 @@ For stability reasons, the wave speed should be chosen at least as large
 as the fastest wave speed appearing in the true Riemann solution.
 However, choosing a wave speed that is too large leads to excess
 diffusion. For the LLF method (originally due to Rusanov), the wave
-speed is chosen as \[a(q_r, q_\ell) = \max(|f'(q)|)\]\\
+speed is chosen as 
+\[a(q_r, q_\ell) = \max(|f'(q)|)\]
 where the maximum is taken over all values of \(q\) between \(q_r\) and
 \(q_\ell\). This ensures stability, but may still introduce substantial
 damping of slower waves.
@@ -5147,11 +5148,11 @@ right-going waves to have different speeds. This approach was developed
 in \cite{HLL}. The solution is then determined by
 (\ref{AS:middle_state}). In the original HLL solver, it was suggested to
 again to use speeds that bound the possible speeds occurring in the true
-solution. For a scalar problem, this translates to\\
+solution. For a scalar problem, this translates to
 \begin{align*}
 s_1 & = \min(f'(q)) \\
 s_2 & = \max(f'(q)),
-\end{align*}\\
+\end{align*}
 where again the minimum and maximum are taken over all values between
 \(q_r\) and \(q_\ell\). Many refinements of this choice have been
 proposed in the context of systems of equations, some of which will be
@@ -6668,7 +6669,7 @@ example, we use the Sod shock tube.
 \end{Verbatim}
 
     \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{combined_files/combined_433_0.pdf}
+    \adjustimage{max size={0.7\linewidth}{0.7\paperheight}}{combined_files/combined_433_0.pdf}
     \end{center}
     { \hspace*{\fill} \\}
     
@@ -6677,7 +6678,7 @@ example, we use the Sod shock tube.
 \end{Verbatim}
 
     \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{combined_files/combined_434_0.pdf}
+    \adjustimage{max size={0.7\linewidth}{0.7\paperheight}}{combined_files/combined_434_0.pdf}
     \end{center}
     { \hspace*{\fill} \\}
     
@@ -6711,7 +6712,7 @@ how the Roe solution compares to the exact solution.
 \end{Verbatim}
 
     \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{combined_files/combined_437_0.pdf}
+    \adjustimage{max size={0.7\linewidth}{0.7\paperheight}}{combined_files/combined_437_0.pdf}
     \end{center}
     { \hspace*{\fill} \\}
     
@@ -6720,7 +6721,7 @@ how the Roe solution compares to the exact solution.
 \end{Verbatim}
 
     \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{combined_files/combined_438_0.pdf}
+    \adjustimage{max size={0.7\linewidth}{0.7\paperheight}}{combined_files/combined_438_0.pdf}
     \end{center}
     { \hspace*{\fill} \\}
     
@@ -6752,7 +6753,7 @@ shock wave.
 \end{Verbatim}
 
     \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{combined_files/combined_440_0.pdf}
+    \adjustimage{max size={0.7\linewidth}{0.7\paperheight}}{combined_files/combined_440_0.pdf}
     \end{center}
     { \hspace*{\fill} \\}
     
@@ -6761,7 +6762,7 @@ shock wave.
 \end{Verbatim}
 
     \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{combined_files/combined_441_0.pdf}
+    \adjustimage{max size={0.7\linewidth}{0.7\paperheight}}{combined_files/combined_441_0.pdf}
     \end{center}
     { \hspace*{\fill} \\}
     
@@ -6794,7 +6795,7 @@ transonic 2-rarefaction:
 \end{Verbatim}
 
     \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{combined_files/combined_444_0.pdf}
+    \adjustimage{max size={0.7\linewidth}{0.7\paperheight}}{combined_files/combined_444_0.pdf}
     \end{center}
     { \hspace*{\fill} \\}
     
@@ -6891,16 +6892,18 @@ q_m = \frac{f(q_r) - f(q_\ell) - s_2 q_r + s_1 q_\ell}{s_1 - s_2}.
 \end{Verbatim}
 
     \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{combined_files/combined_449_0.pdf}
+    \adjustimage{max size={0.7\linewidth}{0.7\paperheight}}{combined_files/combined_449_0.pdf}
     \end{center}
     { \hspace*{\fill} \\}
+
+\newpage
     
     \begin{Verbatim}[fontsize=\small,commandchars=\\\{\}]
 {\color{incolor}In [{\color{incolor}14}]:} \PY{n}{euler}\PY{o}{.}\PY{n}{phase\PYZus{}plane\PYZus{}plot}\PY{p}{(}\PY{n}{left}\PY{p}{,} \PY{n}{right}\PY{p}{,} \PY{n}{approx\PYZus{}states}\PY{o}{=}\PY{n}{states}\PY{p}{[}\PY{l+s+s1}{\PYZsq{}}\PY{l+s+s1}{hlle}\PY{l+s+s1}{\PYZsq{}}\PY{p}{]}\PY{p}{)}
 \end{Verbatim}
 
     \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{combined_files/combined_450_0.pdf}
+    \adjustimage{max size={0.7\linewidth}{0.7\paperheight}}{combined_files/combined_450_0.pdf}
     \end{center}
     { \hspace*{\fill} \\}
     
@@ -6926,7 +6929,7 @@ Here is one example.
 \end{Verbatim}
 
     \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{combined_files/combined_452_0.pdf}
+    \adjustimage{max size={0.6\linewidth}{0.6\paperheight}}{combined_files/combined_452_0.pdf}
     \end{center}
     { \hspace*{\fill} \\}
     
@@ -6956,7 +6959,7 @@ seen clearly in the example below.
 \end{Verbatim}
 
     \begin{center}
-    \adjustimage{max size={0.9\linewidth}{0.9\paperheight}}{combined_files/combined_454_0.pdf}
+    \adjustimage{max size={0.7\linewidth}{0.7\paperheight}}{combined_files/combined_454_0.pdf}
     \end{center}
     { \hspace*{\fill} \\}
     
